# axum-accept

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  dependabot-auto-approve.yml
axum-accept/: Cargo.toml
axum-accept-macros/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT
axum-accept-macros/src/: lib.rs
axum-accept-shared/: Cargo.toml
axum-accept-shared/src/: lib.rs
axum-accept/src/: lib.rs
scripts/: check-versions.rs  check-versions.sh
src/: lib.rs
