[package]
name = "axum-accept-shared"
version = "0.0.4"
edition = "2024"
description = "Shared code for the axum-accept crate"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bahlo/axum-accept"
documentation = "https://docs.rs/axum-accept"

[dependencies]
axum = { workspace = true }
mediatype = { workspace = true }
