[package]
name = "axum-accept"
version = "0.0.1"
authors = ["Arne Bahlo <hey@arne.me>"]
edition = "2024"
description = "Typed accept negotiation for axum."
license = "MIT OR Apache-2.0"
repository = "https://github.com/bahlo/axum-accept"
readme = "README.md"
keywords = ["axum", "accept", "media-type"]

[dependencies]
axum-accept-macros= { version = "0.0.1", path = "../axum-accept-macros" }
axum-accept-shared = { version = "0.0.1", path = "../axum-accept-shared" }

[dev-dependencies]
axum = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
